update String resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,7 +256,7 @@
         <item>it\'s hot, I\'m starting to miss the winter already.</item>
         <item>And it\'s a good day for an ice cold drink.</item>
         <item>An air conditioner would be helpful in this weather.</item>
-        <item>"Do you wanna build a snowman?" Are you stupid Anna? It\'s scorching hot right now!</item>
+        <item>\"Do you wanna build a snowman?\" Are you stupid Anna? It\'s scorching hot right now!</item>
         <item>Let\'s have some ice cream, it\'s hot today.</item>
     </string-array>
 </resources>
