update censoring offensive words

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="depression_level_title">Depression level</string>
     <string name="air_quality_dialog_description">Here are some scientific information</string>
     <string name="provided_by_aqi_cn_org">Provided by aqicn.org</string>
-    <string name="explicit_setting_title">Are you okay with swearing?</string>
+    <string name="explicit_setting_title">Are you okay with offensive words?</string>
     <string name="snack_bar_undo">Undo</string>
     <string name="snack_bar_text">Location deleted.</string>
 
