--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Rainbow</string>
-    <string name="temp_unit_setting">temp_unit_setting</string>
-    <string name="temp_unit_f">F</string>
-    <string name="temp_unit_c">C</string>
+    <string name="app_name" translatable="false">Rainbow</string>
+    <string name="temp_unit_setting" translatable="false">temp_unit_setting</string>
+    <string name="temp_unit_f" translatable="false">F</string>
+    <string name="temp_unit_c" translatable="false">C</string>
     <string name="message_need_permission">Permission needed</string>
-    <string name="message_grant_permission">I need this permission to work properly. You can allow it in your phone\'s settings.</string>
+    <string name="message_grant_permission" translatable="false">I need this permission to work properly. You can allow it in your phone\'s settings.</string>
     <string name="label_setting">OPEN SETTINGS</string>
     <string name="cancel">Cancel</string>
 
@@ -21,40 +21,39 @@
     <string name="slide_3_desc">Swipe down to refresh</string>
 
     <string name="slide_4_title">That\'s Rainbow\'s widget</string>
-    <string name="slide_4_desc">You can tap the weather icon to open the details screen, double tap the quote to refresh the widget</string>
+    <string name="slide_4_desc">You can tap the weather icon to open Rainbow, double tap the quote to refresh the widget</string>
 
     <string name="app_need_permissions_to_run">This app cannot run without the permissions to use this feature</string>
     <string name="exit">Exit</string>
-    <string name="icon_content_description">icon</string>
+    <string name="icon_content_description" translatable="false">icon</string>
 
-    <string name="pref_temp">tempUnit</string>
-    <string name="pref_distance">distanceUnit</string>
-    <string name="pref_speed">speedUnit</string>
-    <string name="pref_pressure">pressureUnit</string>
-    <string name="pref_explicit">explicitOrNot</string>
+    <string name="pref_temp" translatable="false">tempUnit</string>
+    <string name="pref_distance" translatable="false">distanceUnit</string>
+    <string name="pref_speed" translatable="false">speedUnit</string>
+    <string name="pref_pressure" translatable="false">pressureUnit</string>
+    <string name="pref_explicit" translatable="false">explicitOrNot</string>
     <string name="im_not">I\'m not</string>
     <string name="hell_yeah">Hell yeah!</string>
     <string name="setting">Setting</string>
     <string name="temperature_setting_title">Select what you prefer: </string>
     <string name="distance_setting_title">Distance unit</string>
     <string name="speed_setting_title">Speed Unit</string>
-    <string name="pressure_setting_title">Pressure Unit</string>
+    <string name="pressure_setting_title" translatable="false">Pressure Unit</string>
     <string name="rate_setting_title">Rate this super friendly app</string>
-    <string name="about_setting_title">About</string>
-    <string name="help_setting_title">Help</string>
-    <string name="temp_setting_degree_f">°F</string>
-    <string name="temp_setting_degree_c">°C</string>
-    <string name="temp_setting_degree_k">°K</string>
+    <string name="about_setting_title">About Rainbow</string>
+    <string name="temp_setting_degree_f" translatable="false">°F</string>
+    <string name="temp_setting_degree_c" translatable="false">°C</string>
+    <string name="temp_setting_degree_k" translatable="false">°K</string>
     <string name="your_depression">Your depression</string>
-    <string name="depression_unit">depressions</string>
-    <string name="mmhg">mmHg</string>
-    <string name="psi">psi</string>
+    <string name="depression_unit" translatable="false">depressions</string>
+    <string name="mmhg" translatable="false">mmHg</string>
+    <string name="psi" translatable="false">psi</string>
     <string name="banana_h">bananas per hour</string>
-    <string name="miph">mph</string>
-    <string name="kmph">kmph</string>
+    <string name="miph" translatable="false">mph</string>
+    <string name="kmph" translatable="false">kmph</string>
     <string name="bananas">bananas</string>
-    <string name="mi">mile</string>
-    <string name="km">km</string>
+    <string name="mi" translatable="false">mile</string>
+    <string name="km" translatable="false">km</string>
     <string name="scientist">I\'m a scientist</string>
     <string name="details_heading">Today\'s weather starter pack</string>
     <string name="real_feel_title">What it fucking feels like: </string>
@@ -65,7 +64,7 @@
     <string name="pressure_title">Pressure</string>
     <string name="air_quality_index_title">Air Quality Index</string>
     <string name="pressure_title_alt">Depression</string>
-    <string name="about_dialog_heading">About me</string>
+    <string name="about_dialog_heading">About Rainbow</string>
     <string name="about_dialog_intro">Hi! I\'m Rainbow, a super friendly weather app. I was born with a mission of bringing smiles and useful weather information to your daily life, definitely not because someone has too much free time on his hands.</string>
     <string name="about_dialog_outro">If you find me interesting, go ahead and give me a 5-star on PlayStore. Love ya!</string>
     <string name="loading_text">Calling my cloud buddy…</string>
@@ -122,9 +121,8 @@
     <string name="wind_west" translatable="true">West</string>
     <string name="the_next_hours_title">The next hours</string>
     <string name="location_list_title">Locations</string>
-    <string name="quote_placeholder">…</string>
+    <string name="quote_placeholder" translatable="false">…</string>
     <string name="depression_level_title">Depression</string>
-    <string name="air_quality_dialog_description">Here are some scientific information</string>
     <string name="provided_by_aqi_cn_org">Provided by aqicn.org</string>
     <string name="explicit_setting_title">Are you okay with offensive words?</string>
     <string name="snack_bar_undo">Undo</string>
@@ -146,7 +144,7 @@
     <string name="background_setting_title">Home Background</string>
     <string name="random_picture">Random photo</string>
     <string name="photo_details_title">Photo details</string>
-    <string name="not_available">N/A</string>
+    <string name="not_available" translatable="false">N/A</string>
     <string name="photo_name_na">Photo\'s description not provided</string>
     <string name="sponsor">Sponsor</string>
     <string name="time_place_holder">Time:</string>
@@ -169,20 +167,38 @@
     <string name="depress_val_5">Oof</string>
     <string name="depress_val_6">Somewhat</string>
     <string name="depress_val_7">Not at all</string>
-    <string name="depress_val_8">Aaargghhh!!</string>
-    <string name="depress_val_9">42?</string>
+    <string name="depress_val_8" translatable="false">Aaargghhh!!</string>
+    <string name="depress_val_9" translatable="false">42?</string>
     <string name="depress_val_10">Unbearable</string>
     <string name="depress_val_11">Neh</string>
     <string name="powered_by_dark_sky">Powered by Dark Sky</string>
-    <string name="powered_dark_sky_link">https://darksky.net/poweredby/</string>
+    <string name="powered_dark_sky_link" translatable="false">https://darksky.net/poweredby/</string>
     <string name="rainbow_need_permission">Rainbow needs this permission for this feature to work.</string>
-    <string name="okay">Okay</string>
-    <string name="share_this_to">Sharing is caring. Send this to…</string>
+    <string name="okay" translatable="false">@android:string/ok</string>
+    <string name="share_this_to">Sharing is caring. Send this image to…</string>
     <string name="something_went_wrong">Something went wrong, please try again!</string>
     <string name="widget_feel_like">Feels like: </string>
     <string name="currentLocation">Current location</string>
     <string name="askPermissionDescription">Rainbow uses your location to provide weather information and find restaurants near you.</string>
     <string name="askPermissionTitle">Allow Rainbow to access your location</string>
+    <string name="language_setting_title">Language</string>
+    <string name="confirm">Confirm</string>
+
+    <string name="en_lang">English</string>
+    <string name="vi_lang">Vietnamese</string>
+    <string name="photo_by">Photo by</string>
+    <string name="on">on</string>
+    <string name="feature_not_ready">This feature is not ready</string>
+
+    <string-array name="lang_list">
+        <item>@string/en_lang</item>
+        <item>@string/vi_lang</item>
+    </string-array>
+    <string-array name="lang_val">
+        <item>en</item>
+        <item>vi</item>
+    </string-array>
+
     <string-array name="depression_levels">
         <item>@string/depress_val_0</item>
         <item>@string/depress_val_1</item>
