--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="about_dialog_heading">Về Rainbow</string>
-    <string name="about_dialog_intro">Xin chào! Tớ là Rainbow, một app thời tiết siêu thân thiện. Tớ được sinh ra với sứ mệnh mang đến cho cậu những thông tin hữu ích nhất về thời tiết cũng như niềm vui cho cuộc sống hàng ngày, chắc chắn không phải do ai đấy rảnh quá mà viết ra tớ đâu.</string>
-    <string name="about_dialog_outro">Nếu cậu thấy tớ thú vị, nhớ đánh giá tớ 5 sao trên PlayStore nhé. Yêu!</string>
+    <string name="about_dialog_intro">Xin chào! Mình là Rainbow, một app thời tiết siêu thân thiện. Mình được sinh ra với sứ mệnh mang đến cho bạn những thông tin hữu ích nhất về thời tiết cũng như niềm vui cho cuộc sống hàng ngày, chắc chắn không phải do ai đấy rảnh quá mà viết ra mình đâu.</string>
+    <string name="about_dialog_outro">Nếu Bạn thấy mình thú vị, nhớ đánh giá mình 5 sao trên PlayStore nhé. Yêu!</string>
     <string name="about_setting_title">Về Rainbow</string>
     <string name="air_quality_dialog_heading">Chất lượng không khí</string>
     <string name="air_quality_index_title">Chất lượng không khí</string>
     <string name="air_quality_levels">Chất lượng không khí</string>
-    <string name="app_need_permissions_to_run">Ứng dụng này không thể hoạt động nếu không có quyền này</string>
+    <string name="app_need_permissions_to_run">Ứng dụng này không thể hoạt động nếu thiếu quyền này</string>
     <string name="aqi_good">Tốt</string>
     <string name="aqi_good_cs">Không</string>
     <string name="aqi_good_des">Chất lượng không khí đạt tiêu chuẩn</string>
@@ -56,54 +56,46 @@
     <string name="depress_val_6">Hơi hơi</string>
     <string name="depress_val_7">Không</string>
     <string name="depression_level_title">Trầm cảm</string>
-    <string name="details_heading">Hôm nay mặc gì</string>
+    <string name="details_heading">Hôm nay mặc gì?</string>
     <string name="distance_setting_title">Đơn vị khoảng cách</string>
     <string name="exit">Thoát</string>
     <string name="explicit_setting_title">Nói bậy một chút ổn không?</string>
     <string name="hell_yeah">Được thôi</string>
     <string name="hourly_forecast_title">Vài giờ tới</string>
     <string name="humidity_title">Độ ẩm</string>
-    <string name="im_not">Không nhé</string>
+    <string name="im_not">Không</string>
     <string name="label_setting">Mở cài đặt</string>
-    <string name="loading_text">Đang gọi cho bạn tớ trên đám mây…</string>
+    <string name="loading_text">Đang hỏi nhà tiên tri đám mây…</string>
     <string name="location_list_title">Địa điểm</string>
     <string name="message_need_permission">Cần cấp quyền</string>
     <string name="mid_day">Giữa ngày</string>
     <string name="next">TIẾP</string>
     <string name="no_connection_tv1">Không tìm thấy mây</string>
-    <string name="no_connection_tv2">Ờ trời quang thì thích thật đấy nhưng cậu thử kết nối tới internet chưa?</string>
-    <string name="no_connection_tv3">Cậu muốn tớ khóc à?</string>
+    <string name="no_connection_tv2">Ờ trời quang thì thích thật đấy nhưng bạn thử kết nối tới internet chưa?</string>
     <string name="now">Hiện tại</string>
     <string name="photo_details_title">Thông tin ảnh</string>
-    <string name="photo_name_na">Mô tả của ảnh không được cung cấp</string>
     <string name="pressure_title">Áp suất</string>
     <string name="pressure_title_alt">Trầm cảm</string>
     <string name="r_aqi_good_des">Ra ngoài hít thở không khí trong lành nào!!</string>
     <string name="r_aqi_hazardous_des">Nghỉ ở nhà thì tốt hơn. Đừng ra ngoài tự sát bằng việc hít thở đấy.</string>
     <string name="r_aqi_moderate_des">Có vẻ … thở được?</string>
-    <string name="r_aqi_unhealthy_des">Chắc là cần mặt nạ phòng độc đấy!</string>
-    <string name="r_aqi_unhealthy_sensitive_des">Có thể cậu không nhạy cảm, nhưng đeo khẩu trang vẫn tốt hơn.</string>
-    <string name="r_aqi_very_unhealthy_des">Bệnh về phổi chạy ngoài đường kìa! Gotta catch \'em all!</string>
+    <string name="r_aqi_unhealthy_des">Chắc là cần mặt nạ phòng độc!</string>
+    <string name="r_aqi_unhealthy_sensitive_des">Có thể bạn không nhạy cảm, nhưng đeo khẩu trang vẫn tốt hơn.</string>
+    <string name="r_aqi_very_unhealthy_des">Bệnh phổi chạy ngoài đường kìa! Gotta catch \'em all!</string>
     <string name="rainbow_need_permission">Rainbow cần được cấp quyền này để hoạt động.</string>
     <string name="random_color">Màu sắc</string>
     <string name="random_picture">Ảnh bất kỳ</string>
-    <string name="rate_setting_title">Đánh giá app siêu thân thiện này</string>
-    <string name="real_feel_title_explicit">Cảm giác như là:</string>
+    <string name="rate_setting_title">Đánh giá ứng dụng thân thiện này</string>
+    <string name="real_feel_title_explicit">Cảm giác như:</string>
     <string name="real_feel_title">Cảm giác như kiểu đm:</string>
     <string name="scientist">Nhà khoa học</string>
     <string name="setting">Cài đặt</string>
     <string name="share_this_to">Chia sẻ là yêu thương. Gửi hình này tới…</string>
-    <string name="slide_1_desc">Tớ là Rainbow và giờ tớ sẽ hướng dẫn cậu sử dụng ứng dụng này</string>
-    <string name="slide_1_title">Chào đằng ấy!</string>
+    <string name="slide_1_desc">Mình là Rainbow và giờ mình sẽ hướng dẫn bạn sử dụng ứng dụng này</string>
+    <string name="slide_1_title">Xin chào!</string>
     <string name="slide_2_desc">Vuốt trái hoặc phải để điều hướng</string>
-    <string name="slide_2_title">Đây là giao diện chính của Rainbow</string>
     <string name="slide_3_desc">Vuốt xuống để làm mới</string>
-    <string name="slide_3_title">Để làm mới</string>
-    <string name="slide_4_desc">Cậu có thể tap biểu tượng thời tiết để mở rainbow, double tap câu trích dẫn để làm mới widget</string>
-    <string name="slide_4_title">Đây là widget của Rainbow</string>
-    <string name="snack_bar_text">Đã xóa địa điểm</string>
-    <string name="snack_bar_undo">Undo</string>
-    <string name="something_went_wrong">Có gì đấy không đúng, vui lòng thử lại!</string>
+    <string name="something_went_wrong">Có lỗi xảy ra, vui lòng thử lại!</string>
     <string name="speed_setting_title">Đơn vị vận tốc</string>
     <string name="sponsor">Tài trợ</string>
     <string name="start">ĐÃ HIỂU</string>
@@ -111,7 +103,7 @@
     <string name="sun_not_explicit">Viên bi plasma nóng bỏng</string>
     <string name="sun_rise">Bình minh</string>
     <string name="sun_set">Hoàng hôn</string>
-    <string name="temperature_setting_title">Chọn cái cậu thích:</string>
+    <string name="temperature_setting_title">Chọn đơn vị bạn thích:</string>
     <string name="the_next_hours_title">Vài giờ tới</string>
     <string name="time_place_holder">Vào lúc:</string>
     <string name="uv_index_title">Chỉ số UV</string>
@@ -144,5 +136,11 @@
     <string name="on">trên</string>
     <string name="provided_by_aqi_cn_org">Cung cấp bởi aqicn.org</string>
     <string name="powered_by_dark_sky">Cung cấp bởi Dark Sky</string>
-    <string name="feature_not_ready">Chức năng này chưa sẵn sàng hoạt động</string>
+    <string name="feature_not_ready">Chức năng này đang trong quá trình phát triển</string>
+    <string name="and_raining">và mưa.</string>
+    <string name="cold">lạnh</string>
+    <string name="cool">mát</string>
+    <string name="hot">nóng</string>
+    <string name="photo_name_na">Ảnh không có mô tả</string>
+    <string name="mi">dặm</string>
 </resources>
